--- a/css/master.css
+++ b/css/master.css
@@ -3,3 +3,20 @@
   margin: 0px auto;
   border: 2px solid black;
 }
+
+
+.links {
+  width:900px;
+  margin: 0px auto;
+  display:flex;
+  justify-content: space-around;
+}
+
+.title {
+  text-align: center;
+}
+
+
+body {
+  font-family: 'roboto', sans-serif;
+}
